test(AuthService): thêm test cho AuthService, chỉnh sửa pom thành các version phù hợp java 25